more proof work

--- a/akane_paper/mon_proof1.tex
+++ b/akane_paper/mon_proof1.tex
@@ -188,13 +188,49 @@ Given that $\mathbf{reduce}(\psi_1)$ and $\mathbf{reduce}(\psi_2)$ are both soun
 There are three cases for Until: \\
 \textbf{Subcase} $b_2 \neq \emptyset \wedge a_2 \neq \emptyset \wedge b_2 \leq a_2$ \\
 This is the True case for Until. If $b_2$ is non-empty then there exists a residue $\rp{j}{\top} \in S^i_{\phi_2}$ and since $S^i_{\phi_2}$ is sound we know that $\sigma, \tau, j \vDash \phi_2$ with $j \in [i+l,i+h]$. If $a_2$ is non-empty then we know that all residues in $[i,a_2]$ are true, and thus $\forall j \in [i,a_2]: \sigma, \tau, j \vDash \psi_1$. If $b_2 \leq a_2$ then there exists a $k$ such that $\sigma, \tau, k \vDash \psi_2$ ($b_2$) and for all $k' \in [i,k] \sigma, \tau, k' \vDash \psi_1$ (since $a_2 > k$). This is the semantics of Until, so we know that $\sigma, \tau, j \vDash \psi_1 \mathcal{U}_{[l,h]} \psi_2$. \\
-\textbf{Subcase} $(b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge min(b_1,b_2) \geq a_1$ \\
-This is the False case for Until. If $b_1$ or $b_2$ is non-empty then there is a position in $[i+l,i+h]$ which could be True. If $a_1$ is non-empty then there is a position in $\psi_1$ where $\tau, \sigma, a_1 \nvDash \psi_1$. If 
+\textbf{Subcase} $(b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge min(b_1,b_2) \geq a_1$ or $b_f = \top$ \\
+This is the False case for Until. If $b_1$ or $b_2$ is non-empty then the minimum of those two is the earliest position in $[i+l,i+h]$ where $\psi_2$ could be True. If $a_1$ is non-empty then there is a position in $\psi_1$ where $\tau, \sigma, a_1 \nvDash \psi_1$. 
+If $a_1 \leq min(b_1,b_2)$ then it is impossible for $\psi_1 \mathcal{U}_{[l,h]} \psi_2$ to be True since $\psi_1$ is not True from position $i$ to the earliest point that $\psi_2$ could be True. \\
+Otherwise if $b_f = \top$ then for all positions in $[i+l,i+h]$ we know that $\psi_2$ is False, so $\psi_1 \mathcal{U}_{[l,h]} \psi_2$ must be False. \\
+\textbf{Subcase} Otherwise \\
+returning $\phi$ is trivially sound since $\sigma, \tau, j \vDash \phi \rightarrow \sigma, \tau, j \vDash \phi$.
 
 
 % SINCE
 \noindent \textbf{Case} $\phi \equiv \psi_1 \mathcal{S}_{[l,h]} \psi_2$ \\
-In this case reduce is trivially sound, 
+The proof for since is similar to the proof for Until
+\end{proof}
+
+
+\begin{proof}[Promptness]
+
+% TRUE
+\noindent \textbf{Case} $\phi \equiv \top$ \\
+This case is trivially Prompt
+
+% FALSE 
+\noindent \textbf{Case} $\phi \equiv \bot$ \\
+This case is trivially Prompt
+
+% PROP
+\noindent \textbf{Case} $\phi \equiv p$ \\
+This case is trivially Prompt
+
+% NOT
+\noindent \textbf{Case} $\phi \equiv \neg \psi$ \\
+Given that $\mathbf{reduce}(\psi)$ and $\mathbf{simplify}$ are Prompt then $\mathbf{reduce}(\neg \psi)$ is Prompt
+
+% OR
+\noindent \textbf{Case} $\phi \equiv \psi_1 \vee \psi_2$ \\
+Given that $\mathbf{reduce}(\psi_1)$, $\mathbf{reduce}(\psi_2)$ and $\mathbf{simplify}$ are Prompt then $\mathbf{reduce}(\psi_1 \vee \psi_2)$ is Prompt
+
+% UNTIL
+\noindent \textbf{Case} $\phi \equiv \psi_1 \mathcal{U}_{[l,h]} \psi_2$ \\
+First, we note that because $S^i_{\psi_1}$ and $S^i_{\psi_2}$ are Prompt, they contain no unfinished residues. This means that either $a_1$ or $a_2$ must be non-empty 
+There are three cases for Until: \\
+\textbf{Subcase} $b_2 \neq \emptyset \wedge a_2 \neq \emptyset \wedge b_2 \leq a_2$ \\
+\textbf{Subcase} $(b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge min(b_1,b_2) \geq a_1$ \\
+\textbf{Subcase} Otherwise \\
 \end{proof}
 
 \pagebreak
@@ -283,9 +319,10 @@ The reduce function takes a residue and returns the reduced residue:
 	& \quad \quad \quad \quad \wedge \forall j. (i \leq j \leq k \rightarrow \rp{j}{\top} \in S^i_{\psi_1}) \}) \\
 &b_1 \leftarrow min(\{k | k \in [i+l, i+h] \wedge \rp{k}{\psi'} \in S^i_{\psi_2} \wedge \psi' \neq \bot/\top \}) \\
 &b_2 \leftarrow min(\{k | k \in [i+l, i+h] \wedge \rp{k}{\psi'} \in S^i_{\psi_2} \wedge \psi' = \top \}) \\
+&b_f \leftarrow \top \text{ if } \forall k \in [i+l,i+h]. \rp{k}{\bot} \in S^i_{\psi_2} \\
 &\text{if }b_2 \neq \emptyset \wedge a_2 \neq \emptyset \wedge b_2 \leq a_2 \\
 & \quad\mathbf{return} \rp{j}{\top} \\
-&\text{else if } (b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge min(b_1,b_2) \geq a_1 \\
+&\text{else if } (b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge min(b_1,b_2) \geq a_1 \text{ or } b_f = \top\\
 & \quad\mathbf{return} \rp{j}{\bot} \\
 &\text{else} \\
 & \quad\mathbf{return} \rp{j}{\psi_1 \mathcal{S}_{[l,h]} \psi_2}
@@ -300,9 +337,10 @@ The reduce function takes a residue and returns the reduced residue:
 &\quad \quad \quad \quad \wedge \forall j. (j \geq k \rightarrow \rp{j}{\top} \in S^i_{\psi_1}) \}) \\
 &b_1 \leftarrow max(\{k | k \in [i-h, i-l] \wedge \rp{k}{\psi'} \in S^i_{\psi_2} \wedge \psi' \neq \bot/\top \}) \\
 &b_2 \leftarrow max(\{k | k \in [i-h, i-l] \wedge \rp{k}{\psi'} \in S^i_{\psi_2} \wedge \psi' = \top \}) \\
+&b_f \leftarrow \top \text{ if } \forall k \in [i+l,i+h]. \rp{k}{\bot} \in S^i_{\psi_2} \\
 &\text{if } b_2 \neq \emptyset \wedge a_2 \neq \emptyset \wedge b_2 \geq a_2 \\
 & \quad\mathbf{return} \rp{j}{\top} \\
-&\text{else if } (b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge max(b_1,b_2) \leq a_1 \\
+&\text{else if } (b_1 \neq \emptyset \vee b_2 \neq \emptyset) \wedge a_1 \neq \emptyset \wedge max(b_1,b_2) \leq a_1 \text{ or } b_f = \top\\
 & \quad\mathbf{return} \rp{j}{\bot} \\
 &\text{else} \\
 & \quad\mathbf{return} \rp{j}{\psi_1 \mathcal{S}_{[l,h]} \psi_2}
