--- a/akane_paper/mon_proof2.tex
+++ b/akane_paper/mon_proof2.tex
@@ -50,16 +50,20 @@ A residue $\rp{j}{\psi}_\phi$ is a tagged pair where $j \in \mathbb{N}$ is a pos
 
 A history structure $S_{\phi}^i = \{ r_{\phi}^0, r_{\phi}^1, \ldots r_{\phi}^i \}$ is a list of residues.
 
-We let $\mathbb{S}^i_{\psi}$ represent the set of history structures for all temporal subformula of $\psi$, i.e. $\{S^i_{\phi_1}, S^i_{\phi_2}, \ldots\}$.
+We let $\mathbb{S}^i_{\psi}$ represent the set of history structures for all temporal subformula of $\psi$, i.e. $\mathbb{S}^i_{\phi} = \bigcup_{\psi \in \mathbf{tempSub}(\phi)} S^i_\psi$. 
 
-
-\begin{tdef}[Correctness of history structures] For all positions $i$, formulas $\psi$, traces $\sigma$, and time sequences $\tau$, a history structures $S^i_{\psi}$ is correct if:
-\begin{enumerate}
-	\item \text{Sound: } $\forall \rpt{j}{\psi'}{\psi} \in \pst.(\sigma, \tau, j \vDash \psi' \rightarrow \sigma, \tau, j \vDash \psi)$
-	\item \text{Complete: } $\forall j \leq i.(\sigma, \tau, j \vDash \psi \rightarrow \exists \rp{j}{\psi'} \in \pst. \sigma, \tau, j \vDash \psi'$ \text{ and } $\sigma, \tau, j \nvDash \psi \rightarrow \exists \rp{j}{\psi'} \in \pst. \sigma, \tau, j \nvDash \psi')$
-	\item \text{Prompt: } $\forall \rp{j}{\psi'} \in \pst.(\tau_i - \tau_j \geq \Delta^w(\psi) \rightarrow \psi' \equiv \top/\bot)$
-\end{enumerate}
+\begin{tdef}[Correctness of history structures] For all $i, \psi, \sigma, \tau$, a history structures $S^i_{\psi}$ is correct if $\forall \rpt{j}{\psi'}{\psi} \in \pst.(\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \psi)$.
 \end{tdef}
+\begin{tdef}[Promptness of history structures] For all positions $i$, formulas $\psi$, traces $\sigma$, and time sequences $\tau$, a history structures $S^i_{\psi}$ is prompt if $\forall \rpt{j}{\psi'}{\psi} \in \pst.(\tau_i-\tau_j \geq \Delta(\psi) \rightarrow \psi' \equiv \top/\bot)$
+\end{tdef}
+
+%\begin{tdef}[Correctness of history structures] For all positions $i$, formulas $\psi$, traces $\sigma$, and time sequences $\tau$, a history structures $S^i_{\psi}$ is correct if:
+%\begin{enumerate}
+%	\item \text{Sound: } $\forall \rpt{j}{\psi'}{\psi} \in \pst.(\sigma, \tau, j \vDash \psi' \rightarrow \sigma, \tau, j \vDash \psi)$
+%	\item \text{Complete: } $\forall j \leq i.(\sigma, \tau, j \vDash \psi \rightarrow \exists \rp{j}{\psi'} \in \pst. \sigma, \tau, j \vDash \psi'$ \text{ and } $\sigma, \tau, j \nvDash \psi \rightarrow \exists \rp{j}{\psi'} \in \pst. \sigma, \tau, j \nvDash \psi')$
+%	\item \text{Prompt: } $\forall \rp{j}{\psi'} \in \pst.(\tau_i - \tau_j \geq \Delta^w(\psi) \rightarrow \psi' \equiv \top/\bot)$
+%\end{enumerate}
+%\end{tdef}
 
 
 With these properties defined, we ultimately wish to prove the correctness of our top-level algorithm \agmon.
@@ -84,100 +88,127 @@ Proof. Trivial by the semantics of $\mathbf{simplify}$.
 
 
 \begin{lemma}[Correctness of $\mathbf{reduce}(\sigma, \tau, i, \mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$]
-For all $i, j \leq i, \psi, \sigma, \tau,$ correct $\mathbb{S}^i_{\psi}$ and $\psi'$ such that $\sigma, \tau, j \vDash \psi \leftrightarrow \sigma, \tau, j \vDash \psi'$ then if $\rp{j', \phi} \leftarrow \mathbf{reduce}(\sigma,\tau,i\mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi}$ then $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \phi$.
+For all $i, j \leq i, \psi, \sigma, \tau,$ correct $\mathbb{S}^i_{\psi}$ and $\psi'$ such that $\sigma, \tau, j \vDash \psi \leftrightarrow \sigma, \tau, j \vDash \psi'$ then if $\rp{j'}{\phi} \leftarrow \mathbf{reduce}(\sigma,\tau,i,\mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$ then $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \phi$.
 \end{lemma}
 
-\noindent Proof. \\
+\noindent Proof by induction over $\psi$. \\
 
+%%%%%% PROP
+\noindent \textbf{Case $\psi \equiv p$} \\
+There are two cases: $\sigma, \tau, j \vDash p \rightarrow \sigma, \tau, j \vDash \phi$ and $\sigma,\tau,j\vDash \phi \rightarrow \sigma,\tau,j\vDash p$.
+
+\textbf{Subcase 1}
+From the semantics of $p$ in this case we know that $\sigma_i(p) = \top$. In this case $\phi = \top$ (since $\sigma_i(p) = \top$ so we have $\sigma,\tau,j\vDash p \rightarrow \sigma,\tau,j\vDash \top$ which is trivially true).
+
+\textbf{Subcase 2}
+There are two possible subcases here, either $\sigma_i(p) = \bot$ or $\sigma_i(p) = \top$. If $\sigma_i(p) = \bot$ then trivially $\sigma,\tau,j\vDash \bot \rightarrow \sigma,\tau,j\vDash p$. If $\sigma_i(p) = \top$ then we have $\sigma,\tau,j\vDash \top \rightarrow \sigma,\tau,j\vDash p$ which is true from the semantics of $p$ (since $\sigma_i(p) = \top$).
+\\ \\
+%%%%% SINCE
 \noindent \textbf{Case $\alpha \mathcal{S}_{[l,h]} \beta$}
 There are two cases, 1) $\sigma, \tau, j \vDash \psi' \rightarrow \sigma, \tau, j \vDash \phi$ and 2) $\sigma, \tau, j \vDash \phi \rightarrow \sigma, \tau, j \vDash \psi'$.
 
-\noindent \textbf{Case 1} \\
+\textbf{Subcase [$\sigma, \tau, j \vDash \psi' \rightarrow \sigma, \tau, j \vDash \phi$]} 
+By the semantics of Since, we know that $\exists k \in [\tau_j-h,\tau_j-l].(\sigma, \tau, k \vDash \beta \wedge \forall k' \in [k,j].(\sigma, \tau, k' \vDash \alpha))$. Since $S^i_{\beta}$ is correct then there is a $\rp{k}{\top} \in S^i_{\beta}$ and since $S^i_\alpha$ is correct then $\forall k' \in [k+1,j]. \rp{k'}{\top} \in S^i_\alpha$.
 
-By the semantics of Since, we know that $\exists k \in [\tau_j-h,\tau_j-l].(\sigma, \tau, k \vDash \beta \wedge \forall k' \in [k,j].(\sigma, \tau, k' \vDash \alpha))$. Since $S^i_{\beta}$ is correct then there is a $\rp{k}{\top} \in S^i_{\beta}$ and since $S^i_\alpha$ is correct then $\forall k' \in [k,j]. \rp{k'}{\top} \in S^i_\alpha$.
+Given these values in the history structs, we can see from the definition of reduce that $a_a = k$, $a_s = k$, $b_a \geq k$, $b_t \geq k$, and $b_n = \bot$. With these values, we see that $a_s \leq b_t + 1$ and so $\mathbf{reduce}$ returns $\rp{j}{\top}$ and so this case is satisfied.
+
+\textbf{Subcase [$\sigma, \tau, j \vDash \phi \rightarrow \sigma, \tau, j \vDash \psi'$]}
+There are three possible subcases here: $\phi = \top$, $\phi = \bot$, and $\phi = \psi'$.
+
+\hspace{2em} \textbf{Sub-Subcase} $\phi = \top$
+If $\phi = \top$ then we know that $a_s \leq b_t + 1$. For this to be the case there exists $k$ such that $\tau_k \in [\tau_j-h,\tau_j-l] \wedge \rp{k}{\top} \in S^i_\beta$ (i.e., $b_t = k$) and there exists $a \leq k+1$ such that $\forall a' \in [\tau_{k+1},\tau_j].(\rp{a'}{\top} \in S^i_\alpha)$ (i.e., $a_s = a$). Since $\rp{k}{\top}$ is in $S^i_\beta$ and $S^i_\beta$ is correct, we know that $\sigma,\tau,k \vDash \beta$. Since $S^i_\alpha$ is correct we also know from $a_s$ that $\forall k' \in [\tau_{k+1},\tau_j] \sigma, \tau, k' \vDash \alpha$. Given this, we can see that the semantics for Since are met and so $\sigma, \tau, j \vDash \alpha\, \mathcal{S}_{[l,h]}\, \beta$.
+
+\hspace{2em} \textbf{Sub-Subcase} $\phi = \bot$
+If $\phi = \bot$ then we know that either $b_n = \top$ or $a_a > b_a$. If $b_n = \top$ then $\tau_i-\Delta(\psi) \geq \tau_j) \wedge \forall k.(\tau_k \in [\tau_j-l,\tau_j-h] \rightarrow \rp{k}{\bot} \in S^i_\beta)$. Since $S^i_\beta$ is correct, $\forall k.(\tau_k \in [\tau_j-l,\tau_j-h]. \sigma, \tau, k \nvDash \beta)$ which means that $\sigma, \tau, j \nvDash \alpha\, \mathcal{S}_{[l,h]}\, \beta$ due to the semantics of Since.
+
+In the other case, we have $a_a > b_a$. From $b_a$ we know that $\forall k.(k \in [b_a,\tau_j-l] \rightarrow \rp{k}{bot} \in S^i_\beta$ and since $S^i_\beta$ is correct we know that for all these $k$, $\sigma,\tau,k \nvDash \beta$. Given $a_a > b_a$ we know that $\exists k' \in [b_a,\tau_j].(\rp{k'}{\bot} \in S^i_\alpha$ which means that $\sigma, \tau, k' \nvDash \alpha$. From the semantics of since and the above restrictions, for $\phi$ to be satisfied there must exist a point $p \in [\tau_j-h,b_a]. \sigma, \tau, p \vDash \beta$ and $\forall p' \in [p, \tau_j]. \sigma, \tau, p' \vDash \alpha$. But we already know (since $p' \leq b_a$) that $\exists p' \in [p,\tau_j] \sigma, \tau, p' \nvDash \alpha$, so $\alpha\, \mathcal{S}_{[l,h]}\, \beta$ cannot hold.
+
+%which from the definition of reduce we can see that $\exists k.(\tau_k \in [\tau_j-h,\tau_j] \wedge \rp{k}{\bot} \in S^i_\alpha)$ and $\exists k' < k. \tau_{k'} \in [\tau_j-h,\tau_j-l] \wedge \rp{k}{\beta'} \in S^i_\beta \wedge \beta' \neq \bot$.
+\hspace{2em} \textbf{Sub-Subcase} $\phi = \psi'$
+This case is trivial, since $\sigma,\tau,j\vDash \psi' \rightarrow \sigma,\tau,j\vDash \psi'$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% need to remove this one we get going.
-\begin{lemma}[Correctness of $\mathbf{reduce}(\sigma, \tau, i, \mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$]
-For all positions $i,j$ with $j \leq i$, formulas $\psi$, traces $\sigma$, time series $\tau$, $\psi'$ such that 
-$\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j, \psi$, and all $S^i_{\phi'} \in \mathbb{S}^i_{\psi}$ correct it is the case that
-for $\rp{j'}{\phi} \leftarrow \mathbf{reduce}(\sigma, \tau, i, \mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$ 
-1) $\sigma, \tau, j \vDash \psi \leftrightarrow \sigma, \tau, j \vDash \phi$ and
-2) if $\tau_i - \tau_j \geq \Delta^w(\psi)$ then $\phi \in \{\top, \bot\}$
-\end{lemma}
-
-\noindent Proof is by induction over the formula $\phi'$: \\
-%% TRUE
-\noindent \textbf{Case} $\psi' \equiv \top$ \\
-This case returns the given residue, and since $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \psi$, 
-property 1 is satisfied and since $\psi' \in \{\top,\bot\}$ property 2 is satisfied.
-\\ \\ %% FALSE 
-\noindent \textbf{Case} $\psi' \equiv \bot$ \\
-This case returns the given residue, and since $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \psi$, 
-property 1 is satisfied and since $\psi' \in \{\top,\bot\}$ property 2 is satisfied.
-\\ \\ %% PROP
-\noindent \textbf{Case} $\psi' \equiv p$ \\
-In this case reduce returns $\rp{j}{\sigma(p)}$ -- this satisfies property one by the semantics of our logic ($\sigma, \tau, j \vDash p \leftrightarrow \sigma(p)$).
-Property 2 is trivially satisfied as this always returns $\phi \in \{\top, \bot\}$
-\\ \\ %% NOT
-\noindent \textbf{Case} $\psi' \equiv \neg \phi$ \\
-In this case we first obtain $\psi_1 \leftarrow \mathbf{reduce}(\phi)$ and then obtain $\psi_2 \leftarrow \mathbf{simplify}(\neg \psi_1)$.
-Since $\mathbf{simplify}$ is correct (Lemma 1) and $\sigma, \tau, j \vDash \psi_1 \leftrightarrow \sigma, \tau, j \vDash \phi$ 
-	we have $\sigma, \tau, j \vDash \psi_2 \leftrightarrow \sigma, \tau, j \vDash \neg \phi$.
-
-Since $\mathbf{reduce}$ is prompt we know that $\psi_1$ is prompt and since $\mathbf{simplify}$ is correct then this case will be prompt (property 2).
-\\ \\ %% OR
-\noindent \textbf{Case} $\psi' \equiv \alpha \vee \beta$ \\
-In this case we first obtain $\psi_a \leftarrow \mathbf{reduce}(\alpha)$ and $\psi_b \leftarrow \mathbf{reduce}(\beta)$.
-So we have $\sigma, \tau, j \vDash \psi_a \leftrightarrow \sigma, \tau, j \vDash \alpha$ and similarly for $\beta$.
-Next we recombine these into $\psi_{ab} = \psi_a \vee \psi_b$ and obtain $\phi \leftarrow \mathbf{simplify}(\psi_{ab})$.
-Since $\mathbf{simplify}$ is correct we know that $\sigma, \tau, j \vDash \phi \leftrightarrow \sigma, \tau, j \vDash \psi_a \vee \psi_b$.
-
-Since $\mathbf{reduce}$ is prompt we know that $\psi_a$ and $\psi_b$ are prompt, so $\psi_{ab}$ is also prompt and thus $\phi$ is prompt.
-\\ \\ %% UNTIL
-\noindent \textbf{Case} $\psi' \equiv \alpha \mathcal{U}_{[l,h]} \beta$ \\
-In this case we calculate five values and then use these values to determine the appropriate reduction. There are 4 possible reductions:
-\begin{enumerate}
-\item $b_t \leq a_u$ -- returning $\rp{j}{\top}$
-\item $a_a < b_a$ -- returning $\rp{j}{\bot}$
-\item $b_n \equiv \top$ -- returning $\rp{j}{\bot}$
-\item otherwise returning $\rp{j}{\psi'}$
-\end{enumerate}
-
-The first case is for when the formula is true. If $b_t$ is not empty then $\sigma, \tau, b_t \vDash \beta$ and 
-if $a_u$ is non-empty then 
-	$\forall n' \in [\tau_j,\tau_j+h].(n' < a_u \rightarrow \sigma, \tau, n' \vDash \alpha)$
-	so if $b_t \leq a_u$ then this is the truth semantics of Until ($\exists t. \sigma, \tau, t \vDash \beta$ and $\forall t' \in [\tau_j+l,t] \sigma, \tau, t' \vDash \alpha$)
-
-The second case is the most complex. In this case we check whether it's possible for $\psi'$ to be true (whether $\alpha$ can be true until the first possible true $\beta$).
-If $a_a$ is non-empty then $\sigma, \tau, a_a \nvDash \alpha$. If $b_a$ is non-empty then $b_a$ is the minimum position in $[\tau_j+l,\tau_j+h]$ where it's possible that $\beta$ is true, i.e. $\forall k \in [\tau_j+l,\tau_j+h].(k < b_a \rightarrow \sigma, \tau, k \nvDash \beta)$.
-So if $a_a < b_a$ then there are two cases: 
-\begin{enumerate}
-\item $\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$  -- in this case we know that $k \geq b_a$ and thus $\psi'$ must be false since we already know that $\sigma,\tau,a_a \nvDash \alpha$ and $a_a \in [\tau_j, k]$ so we cannot have $\alpha$ until $\beta$.
-\item $\not\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$ -- in this case $\alpha \mathcal{U}_{[l,h]} \beta$ is false, so we can return $\rp{j}{\bot}$
-\end{enumerate}
-
-The third case, if $b_n \equiv \top$ then because $S^i_{\beta}$ is prompt we know that $\not\exists t \in [\tau_j+l,\tau_j+h].(\sigma,\tau,t \vDash \beta)$. 
-Since this is true we know that $\alpha \mathcal{U}_{[l,h]} \beta$ must be false and so we can return $\rp{j}{\bot}$
-
-This last case is trivially correct.
-
-For promptness, there are two base cases -- either $\tau_i-\tau_j \geq \Delta^w(\psi)$ (i.e., the residue is past due) or $\tau_i-\tau_j < \Delta^w(\psi)$ (in which case the residue is not due yet, and so any returned value is prompt).
-
-So we only need to deal with the past due scenario: There are three possible scenarios:
-
-\noindent \textbf{Subcase} \textit{No Beta} \\
-There does not exist a $k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$. In this case, $b_n$ will be $\top$ so reduce will return $\rp{j}{\bot}$, satisfying promptness.
-\\ \\
-\noindent \textbf{Subcase} \textit{Not alpha until Beta} 
-$\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$ but $\not\forall k' \in [\tau_j,k].(\sigma, \tau, k' \vDash \alpha)$. In this case, since there is a $\beta$ within the bounds then $b_a = k$. Since in this case there exists a $k' \in [\tau_j,k]$ where $\sigma,\tau, k' \nvDash \alpha$ then $a_a = k'$. Since we know that $k' < k$, we have $a_a < b_a$ and so reduce will return $\rp{j}{\bot}$.
-\\ \\
-\noindent \textbf{Subcase} \textit{Alpha until Beta} 
-In this case, $\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k\vDash \beta)$ and $\forall k' \in [\tau_j,k].(\sigma,\tau,k' \vDash \alpha)$. So we have $b_a = k$ and $a_u \geq k$ (since the minimum residue in $[\tau_j,\tau_j+h]$ which is not $\top$ must be after $k$). So we have $b_t \leq a_u$ and so reduce returns $\rp{j}{\top}$.
-\\ \\ %% SINCE
-\noindent \textbf{Case} $\psi' \equiv \alpha \mathcal{S}_{[l,h]} \beta$ \\
-This proof is the same as the Until case
-
+%OLD%\begin{lemma}[Correctness of $\mathbf{reduce}(\sigma, \tau, i, \mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$]
+%OLD%For all positions $i,j$ with $j \leq i$, formulas $\psi$, traces $\sigma$, time series $\tau$, $\psi'$ such that 
+%OLD%$\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j, \psi$, and all $S^i_{\phi'} \in \mathbb{S}^i_{\psi}$ correct it is the case that
+%OLD%for $\rp{j'}{\phi} \leftarrow \mathbf{reduce}(\sigma, \tau, i, \mathbb{S}^i_{\psi}, \rpt{j}{\psi'}{\psi})$ 
+%OLD%1) $\sigma, \tau, j \vDash \psi \leftrightarrow \sigma, \tau, j \vDash \phi$ and
+%OLD%2) if $\tau_i - \tau_j \geq \Delta^w(\psi)$ then $\phi \in \{\top, \bot\}$
+%OLD%\end{lemma}
+%OLD%
+%OLD%\noindent Proof is by induction over the formula $\phi'$: \\
+%OLD%%% TRUE
+%OLD%\noindent \textbf{Case} $\psi' \equiv \top$ \\
+%OLD%This case returns the given residue, and since $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \psi$, 
+%OLD%property 1 is satisfied and since $\psi' \in \{\top,\bot\}$ property 2 is satisfied.
+%OLD%\\ \\ %% FALSE 
+%OLD%\noindent \textbf{Case} $\psi' \equiv \bot$ \\
+%OLD%This case returns the given residue, and since $\sigma, \tau, j \vDash \psi' \leftrightarrow \sigma, \tau, j \vDash \psi$, 
+%OLD%property 1 is satisfied and since $\psi' \in \{\top,\bot\}$ property 2 is satisfied.
+%OLD%\\ \\ %% PROP
+%OLD%\noindent \textbf{Case} $\psi' \equiv p$ \\
+%OLD%In this case reduce returns $\rp{j}{\sigma(p)}$ -- this satisfies property one by the semantics of our logic ($\sigma, \tau, j \vDash p \leftrightarrow \sigma(p)$).
+%OLD%Property 2 is trivially satisfied as this always returns $\phi \in \{\top, \bot\}$
+%OLD%\\ \\ %% NOT
+%OLD%\noindent \textbf{Case} $\psi' \equiv \neg \phi$ \\
+%OLD%In this case we first obtain $\psi_1 \leftarrow \mathbf{reduce}(\phi)$ and then obtain $\psi_2 \leftarrow \mathbf{simplify}(\neg \psi_1)$.
+%OLD%Since $\mathbf{simplify}$ is correct (Lemma 1) and $\sigma, \tau, j \vDash \psi_1 \leftrightarrow \sigma, \tau, j \vDash \phi$ 
+%OLD%	we have $\sigma, \tau, j \vDash \psi_2 \leftrightarrow \sigma, \tau, j \vDash \neg \phi$.
+%OLD%
+%OLD%Since $\mathbf{reduce}$ is prompt we know that $\psi_1$ is prompt and since $\mathbf{simplify}$ is correct then this case will be prompt (property 2).
+%OLD%\\ \\ %% OR
+%OLD%\noindent \textbf{Case} $\psi' \equiv \alpha \vee \beta$ \\
+%OLD%In this case we first obtain $\psi_a \leftarrow \mathbf{reduce}(\alpha)$ and $\psi_b \leftarrow \mathbf{reduce}(\beta)$.
+%OLD%So we have $\sigma, \tau, j \vDash \psi_a \leftrightarrow \sigma, \tau, j \vDash \alpha$ and similarly for $\beta$.
+%OLD%Next we recombine these into $\psi_{ab} = \psi_a \vee \psi_b$ and obtain $\phi \leftarrow \mathbf{simplify}(\psi_{ab})$.
+%OLD%Since $\mathbf{simplify}$ is correct we know that $\sigma, \tau, j \vDash \phi \leftrightarrow \sigma, \tau, j \vDash \psi_a \vee \psi_b$.
+%OLD%
+%OLD%Since $\mathbf{reduce}$ is prompt we know that $\psi_a$ and $\psi_b$ are prompt, so $\psi_{ab}$ is also prompt and thus $\phi$ is prompt.
+%OLD%\\ \\ %% UNTIL
+%OLD%\noindent \textbf{Case} $\psi' \equiv \alpha \mathcal{U}_{[l,h]} \beta$ \\
+%OLD%In this case we calculate five values and then use these values to determine the appropriate reduction. There are 4 possible reductions:
+%OLD%\begin{enumerate}
+%OLD%\item $b_t \leq a_u$ -- returning $\rp{j}{\top}$
+%OLD%\item $a_a < b_a$ -- returning $\rp{j}{\bot}$
+%OLD%\item $b_n \equiv \top$ -- returning $\rp{j}{\bot}$
+%OLD%\item otherwise returning $\rp{j}{\psi'}$
+%OLD%\end{enumerate}
+%OLD%
+%OLD%The first case is for when the formula is true. If $b_t$ is not empty then $\sigma, \tau, b_t \vDash \beta$ and 
+%OLD%if $a_u$ is non-empty then 
+%OLD%	$\forall n' \in [\tau_j,\tau_j+h].(n' < a_u \rightarrow \sigma, \tau, n' \vDash \alpha)$
+%OLD%	so if $b_t \leq a_u$ then this is the truth semantics of Until ($\exists t. \sigma, \tau, t \vDash \beta$ and $\forall t' \in [\tau_j+l,t] \sigma, \tau, t' \vDash \alpha$)
+%OLD%
+%OLD%The second case is the most complex. In this case we check whether it's possible for $\psi'$ to be true (whether $\alpha$ can be true until the first possible true $\beta$).
+%OLD%If $a_a$ is non-empty then $\sigma, \tau, a_a \nvDash \alpha$. If $b_a$ is non-empty then $b_a$ is the minimum position in $[\tau_j+l,\tau_j+h]$ where it's possible that $\beta$ is true, i.e. $\forall k \in [\tau_j+l,\tau_j+h].(k < b_a \rightarrow \sigma, \tau, k \nvDash \beta)$.
+%OLD%So if $a_a < b_a$ then there are two cases: 
+%OLD%\begin{enumerate}
+%OLD%\item $\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$  -- in this case we know that $k \geq b_a$ and thus $\psi'$ must be false since we already know that $\sigma,\tau,a_a \nvDash \alpha$ and $a_a \in [\tau_j, k]$ so we cannot have $\alpha$ until $\beta$.
+%OLD%\item $\not\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$ -- in this case $\alpha \mathcal{U}_{[l,h]} \beta$ is false, so we can return $\rp{j}{\bot}$
+%OLD%\end{enumerate}
+%OLD%
+%OLD%The third case, if $b_n \equiv \top$ then because $S^i_{\beta}$ is prompt we know that $\not\exists t \in [\tau_j+l,\tau_j+h].(\sigma,\tau,t \vDash \beta)$. 
+%OLD%Since this is true we know that $\alpha \mathcal{U}_{[l,h]} \beta$ must be false and so we can return $\rp{j}{\bot}$
+%OLD%
+%OLD%This last case is trivially correct.
+%OLD%
+%OLD%For promptness, there are two base cases -- either $\tau_i-\tau_j \geq \Delta^w(\psi)$ (i.e., the residue is past due) or $\tau_i-\tau_j < \Delta^w(\psi)$ (in which case the residue is not due yet, and so any returned value is prompt).
+%OLD%
+%OLD%So we only need to deal with the past due scenario: There are three possible scenarios:
+%OLD%
+%OLD%\noindent \textbf{Subcase} \textit{No Beta} \\
+%OLD%There does not exist a $k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$. In this case, $b_n$ will be $\top$ so reduce will return $\rp{j}{\bot}$, satisfying promptness.
+%OLD%\\ \\
+%OLD%\noindent \textbf{Subcase} \textit{Not alpha until Beta} 
+%OLD%$\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k \vDash \beta)$ but $\not\forall k' \in [\tau_j,k].(\sigma, \tau, k' \vDash \alpha)$. In this case, since there is a $\beta$ within the bounds then $b_a = k$. Since in this case there exists a $k' \in [\tau_j,k]$ where $\sigma,\tau, k' \nvDash \alpha$ then $a_a = k'$. Since we know that $k' < k$, we have $a_a < b_a$ and so reduce will return $\rp{j}{\bot}$.
+%OLD%\\ \\
+%OLD%\noindent \textbf{Subcase} \textit{Alpha until Beta} 
+%OLD%In this case, $\exists k \in [\tau_j+l,\tau_j+h].(\sigma,\tau,k\vDash \beta)$ and $\forall k' \in [\tau_j,k].(\sigma,\tau,k' \vDash \alpha)$. So we have $b_a = k$ and $a_u \geq k$ (since the minimum residue in $[\tau_j,\tau_j+h]$ which is not $\top$ must be after $k$). So we have $b_t \leq a_u$ and so reduce returns $\rp{j}{\top}$.
+%OLD%\\ \\ %% SINCE
+%OLD%\noindent \textbf{Case} $\psi' \equiv \alpha \mathcal{S}_{[l,h]} \beta$ \\
+%OLD%This proof is the same as the Until case
+%OLD%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagebreak
@@ -213,10 +244,18 @@ Our top level aggressive monitoring algorithm is as follows:
 \end{aligned} \right. \\
 \end{align*}
 
-
+%%% temp_sub/need
+\begin{align*}
+\mathbf{tempSub}(\psi) = \left\lbrace
+\begin{aligned}
+\{\psi_1\} \cup \{\psi_2\} \cup \mathbf{tempSub}(\psi_1) \\
+\cup \mathbf{tempSub}(\psi_2) & \quad \text{ if } \psi \equiv \psi_1 \mathcal{U}_{[l,h]} \psi_2 \text{ or } \psi \equiv \psi_1 \mathcal{S}_{[l,h]} \psi_2 \\
+\emptyset & \quad \text{ if } \psi \equiv p \\
+\mathbf{tempSub}(\psi_1) \cup \mathbf{tempSub}(\psi_2) & \quad \text{ if } \psi \equiv \psi_1 \vee \psi_2 \\
+\mathbf{tempSub}(\psi_1) & \quad \text{ if } \psi \equiv \neg \psi_1
+\end{aligned} \right.
+\end{align*}
 %%% Delta
-
-
 \begin{align*}
 \Delta(\phi) = \left\lbrace
 \begin{aligned}
@@ -237,7 +276,6 @@ max(\Delta(\alpha),\Delta(\beta)) & \quad \text{ iff } \phi \equiv \alpha\, \mat
 \end{align*}
 
 %%% Delta^w
-
 \begin{align*}
 \Delta^w(\phi) = \left\lbrace
 \begin{aligned}
@@ -267,7 +305,7 @@ The reduce function takes a residue and returns the reduced residue:
 \begin{align*}
 \mathbf{reduce}(\sigma,\tau, i,\pi,\rp{j}{\top}) &= \rp{j}{\top} \\
 \mathbf{reduce}(\sigma,\tau, i,\pi,\rp{j}{\bot}) &= \rp{j}{\bot} \\
-\mathbf{reduce}(\sigma,\tau, i,\pi,\rp{j}{p}) &= \rp{j}{\sigma(p)} \\
+\mathbf{reduce}(\sigma,\tau, i,\pi,\rp{j}{p}) &= \rp{j}{\sigma_i(p)} \\
 \end{align*}
 %%% NOT
 \begin{align*}
@@ -310,16 +348,18 @@ The reduce function takes a residue and returns the reduced residue:
 %%% TAU SINCE
 
 \begin{align*}
-\mathbf{reduce}(\sigma,\tau, i,\pi,\rp{j}{\alpha\, \mathcal{S}_{[l,h]}\, \beta}) = \left\{
+\mathbf{reduce}(\sigma,\tau, i,\mathbb{S}^i_{\phi} ,\rp{j}{\alpha\, \mathcal{S}_{[l,h]}\, \beta}) = \left\{
 \begin{aligned}
-&\text{let } a_a \leftarrow max(\{k | \tau_k - \tau_j \in [-h, 0] \wedge \rp{k}{\bot} \in S^i_{\alpha} \})  \\
-&a_u \leftarrow max(\{k | \tau_k - \tau_j \in [-h, 0] \wedge  \rp{k}{\psi'} \in S^i_{\alpha} \wedge \psi' \neq \top \}, j) \\
-&b_a \leftarrow max(\{k | \tau_k - \tau_j \in [-h, -l] \wedge \rp{k}{\psi'} \in S^i_{\beta} \wedge \psi' \neq \bot \}, j)  \\
-&b_t \leftarrow max(\{k | \tau_k - \tau_j \in [-h, -l] \wedge \rp{k}{\top} \in S^i_{\beta} \}) \\
-&b_n \leftarrow \top \text{ if } (\tau_i - \Delta^w(\psi) \geq \tau_j) \wedge \forall k.(\tau_k - \tau_i \in [l,h] \rightarrow \rp{k}{\bot} \in S^i_{\beta}) \\
-&\text{if }b_t \neq \emptyset \wedge b_t \leq a_u \\
+&\text{let } a_a \leftarrow max(\{k | \tau_k \in [\tau_j-h, \tau_j] \wedge \rp{k}{\bot} \in S^i_\alpha \}) \\ 
+& a_s \leftarrow min(\{k | \tau_k \in [\tau_j-h, \tau_j]  \\
+& \quad \quad \wedge \forall k' \in [\tau_k,\tau_j].(\rp{k'}{\alpha'} \in S^i_\alpha \wedge \alpha' = \top) \}, j+1) \\
+%
+& b_a \leftarrow max(\{k | \tau_k \in [\tau_j-h, \tau_j-l] \wedge \rp{k}{\beta'} \in S^i_\beta \wedge \beta' \neq \bot\}) \\ 
+&b_t \leftarrow max(\{k | \tau_k \in [\tau_j-h, \tau_j-l] \wedge \rp{k}{\top} \in S^i_{\beta} \}) \\
+&b_n \leftarrow \top \text{ if } (\tau_i - \Delta^w(\psi) \geq \tau_j) \wedge \forall k.(\tau_k \in [\tau_j-l,\tau_j-h] \rightarrow \rp{k}{\bot} \in S^i_{\beta}) \\
+&\text{if } b_t \neq \emptyset \wedge a_s \leq b_t + 1\\
 & \quad\mathbf{return} \rp{j}{\top} \\
-&\text{else if } a_a < b_a \text{ or } b_n = \top\\ & \quad\mathbf{return} \rp{j}{\bot} \\
+&\text{else if } (a_a \neq \emptyset \wedge b_a \neq \emptyset) \wedge a_a > b_a \text{ or } b_n = \top\\ & \quad\mathbf{return} \rp{j}{\bot} \\
 &\text{else} \\
 & \quad\mathbf{return} \rp{j}{\alpha\, \mathcal{S}_{[l,h]}\, \beta}
 \end{aligned} \right. \\
